[gd_scene load_steps=20 format=3 uid="uid://d2shlbhf8fkks"]

[ext_resource type="Texture2D" uid="uid://cch8c3jt5o3gb" path="res://assets/spell_assets/earth_spike_sprite_sheet.png" id="1_d264w"]
[ext_resource type="Script" path="res://scripts/character/spell_scripts/earthspike.gd" id="1_oa5gd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4p3c5"]
atlas = ExtResource("1_d264w")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_47kwx"]
atlas = ExtResource("1_d264w")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_llleb"]
atlas = ExtResource("1_d264w")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejm7g"]
atlas = ExtResource("1_d264w")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hx7v"]
atlas = ExtResource("1_d264w")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk3eg"]
atlas = ExtResource("1_d264w")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yhxo"]
atlas = ExtResource("1_d264w")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqc5g"]
atlas = ExtResource("1_d264w")
region = Rect2(2048, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tp18"]
atlas = ExtResource("1_d264w")
region = Rect2(512, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntmvq"]
atlas = ExtResource("1_d264w")
region = Rect2(1536, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n2d7"]
atlas = ExtResource("1_d264w")
region = Rect2(0, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2a1d"]
atlas = ExtResource("1_d264w")
region = Rect2(1024, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh20q"]
atlas = ExtResource("1_d264w")
region = Rect2(2048, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_13l8l"]
atlas = ExtResource("1_d264w")
region = Rect2(512, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6li3"]
atlas = ExtResource("1_d264w")
region = Rect2(1536, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy7sx"]
atlas = ExtResource("1_d264w")
region = Rect2(0, 3072, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0gad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47kwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llleb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejm7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hx7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk3eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yhxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqc5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tp18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntmvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n2d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2a1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh20q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13l8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6li3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy7sx")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="earthspike" type="Node2D" groups=["burst", "earth", "spell"]]
script = ExtResource("1_oa5gd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(15, -32)
scale = Vector2(0.167, 0.167)
sprite_frames = SubResource("SpriteFrames_v0gad")
frame = 15
frame_progress = 1.0

[node name="deletion_timer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(18, 0)
target_position = Vector2(0, 264)

[node name="collision_off_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="collision_on_timer" type="Timer" parent="."]
wait_time = 0.333
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["burst_collision"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(15, 0)
polygon = PackedVector2Array(-37, 0, 26, -31, 4, 0)
disabled = true

[connection signal="timeout" from="deletion_timer" to="." method="_on_deletion_timer_timeout"]
[connection signal="timeout" from="collision_off_timer" to="." method="_on_collision_off_timer_timeout"]
[connection signal="timeout" from="collision_on_timer" to="." method="_on_collision_on_timer_timeout"]
